company info added on contact page

--- a/personal-test-projects/Connect2Rep/contact.html
+++ b/personal-test-projects/Connect2Rep/contact.html
@@ -60,13 +60,20 @@
 
 											<input type="text" placeholder="Company/Organization">
 											<input type="text" placeholder="Occupation">
-											
+
 											<input type="text" placeholder="Phone">
 											<textarea name="" id="" placeholder="Enter your message"></textarea>
 											<input type="submit" value="Send">
 										</form>
 									</header>
 								</article>
+
+								<div class="address-box">
+									<h1>Connect<img class="branding" src="images/c2r-icon.png" alt="2">Rep</h1>
+									<p>We connect you with the professionals!</p>
+									<p>+1-23-456-766</p>
+									<p><a href="mailto:info@connect2rep.com">info@connect2rep.com</a></p>
+								</div>
 							</div>
 						</div>
 					</div>
