--- a/personal-test-projects/Connect2Rep/about.html
+++ b/personal-test-projects/Connect2Rep/about.html
@@ -31,15 +31,19 @@
 
 		<!-- Nav -->
 			<nav id="nav" class="skel-layers-fixed">
+				<ul class="primary">
+					<li><a href="index.html">Home</a></li>
+				</ul>
+
 				<ul>
-					<li class="current"><a href="about.html">About Us</a></li>
+					<li class="active"><a href="about.html">About Us</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 
 				<ul class="secondary">
-					<li><a class="nav-sign-in" href="javascript://">Members Sign In</a></li>
-					<li><a class="nav-join" href="javascript://">Join For Free</a></li>
+					<li><a class="nav-sign-in" href="javascript://">Members Connect</a></li>
+					<li><a class="nav-join" href="javascript://">Connect For Free</a></li>
 				</ul>
 			</nav>
 		
@@ -60,15 +64,16 @@
 								<strong>Connect2rep</strong> helps complete the call!</p>
 
 
-								<h3><i class="service icon fa-users"></i> For sales or service professionals.</h3>
+								<h3><i class="service icon fa-users"></i> For sales or service professionals</h3>
 								<ul>
 									<li>C2R allows you to manage your activity for efﬁciency.</li>
 									<li>C2R helps prevent scheduling conﬂicts.  No more double booking or having to check your calendar.</li>
 									<li>C2R helps you check in on your customer without wasting time.</li>
 									<li>C2R helps level the playing ﬁeld.</li>
+									<li><strong>If you have a product to sell or a service to provide, this is the place for you.</strong></li>
 								</ul>
 
-								<h3><i class="service icon fa-building-o"></i> For facilities.</h3>
+								<h3><i class="service icon fa-building-o"></i> For professional offices or facilities</h3>
 								<ul>
 									<li>
 										C2R provides a centralized source to manage vendor activity. <br>
@@ -79,16 +84,18 @@
 										C2R prevents unnecessary time from being spent on the same task. <br>
 										- If you need to make a change or communicate a message, you only have to do it once.
 									</li>
+									<li><strong>If you are a place of business or a retail establishment, this is the place for you.</strong></li>
 								</ul>
 
-								<h3><i class="service icon fa-cogs"></i> For corporations.</h3>
+								<!-- <h3><i class="service icon fa-cogs"></i> For corporations</h3>
 								<ul>
 									<li>C2R helps ensure that your employees are going to be spending their time wisely.</li>
-								</ul>
+								</ul> -->
 
-								<h3><i class="service icon fa-smile-o"></i> For consumers.</h3>
+								<h3><i class="service icon fa-smile-o"></i> For consumers</h3>
 								<ul>
 									<li>C2R helps you ﬁnd the product or service you're looking for in the fastest way possible.</li>
+									<li><strong>Whether you are the; purchaser, client, or patient or a good or service, this is the place for you.</strong></li>
 								</ul>
 
 							</section>
@@ -99,8 +106,8 @@
 				<div class="row 200%">
 					<div class="12u">
 						<div class="footer-sign-in">
-							<a class="nav-sign-in" href="javascript://">Members Sign In</a>
-							<a class="nav-join" href="javascript://">Join for free</a>
+							<a class="nav-sign-in" href="javascript://">Members Connect</a>
+							<a class="nav-join" href="javascript://">Connect for free</a>
 						</div>
 					</div>
 				</div>				
@@ -110,7 +117,7 @@
 
 						<!-- Contact -->
 							<section class="social-icons">
-								<h2 class="major"><span>Get in touch</span></h2>
+								<h2 class="major"><span>Connect</span></h2>
 								<ul class="contact">
 									<li><a class="icon fa-facebook" href="javascript://"><span class="label">Facebook</span></a></li>
 									<li><a class="icon fa-twitter" href="javascript://"><span class="label">Twitter</span></a></li>
