--- a/personal-test-projects/Connect2Rep/contact.html
+++ b/personal-test-projects/Connect2Rep/contact.html
@@ -31,15 +31,19 @@
 
 		<!-- Nav -->
 			<nav id="nav" class="skel-layers-fixed">
+				<ul class="primary">
+					<li><a href="index.html">Home</a></li>
+				</ul>
+
 				<ul>
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="services.html">Services</a></li>
-					<li class="current"><a href="contact.html">Contact Us</a></li>
+					<li class="active"><a href="contact.html">Contact Us</a></li>
 				</ul>
 
 				<ul class="secondary">
-					<li><a class="nav-sign-in" href="javascript://">Members Sign In</a></li>
-					<li><a class="nav-join" href="javascript://">Join For Free</a></li>
+					<li><a class="nav-sign-in" href="javascript://">Members Connect</a></li>
+					<li><a class="nav-join" href="javascript://">Connect For Free</a></li>
 				</ul>
 			</nav>
 		
@@ -69,8 +73,8 @@
 								</article>
 
 								<div class="address-box">
-									<h1>Connect<img class="branding" src="images/c2r-icon.png" alt="2">Rep</h1>
-									<p>We connect you with the professionals!</p>
+									<img src="images/logo-contact.png" alt="">
+									<h2>Complete the call!</h2>
 									<p>+1-23-456-766</p>
 									<p><a href="mailto:info@connect2rep.com">info@connect2rep.com</a></p>
 								</div>
@@ -82,77 +86,6 @@
 
 		<!-- Footer -->
 			<footer id="footer" class="container">
-				<div class="row 200%">
-					<div class="12u">
-
-						<!-- Features -->
-							<section class="box features">
-								<h2 class="major"><span>Interactions should be a <img class="branding" src="images/c2r-icon.png" alt=""> way street</span></h2>
-								<p><strong>Connect2rep</strong> helps facilitate and optimize the interactions between sales and service professionals and their customers.  Regardless of the industry you're in, there is always room for improvement in the way daily activities are conducted.  Connect2rep is the answer.  Connect2rep provides a much needed level of accountability in an environment where it often goes unchecked.<br>
-								<strong>Connect2rep</strong> helps complete the call!</p>
-
-
-								<h3><i class="service icon fa-users"></i> For sales or service professionals.</h3>
-								<ul>
-									<li>C2R allows you to manage your activity for efﬁciency.</li>
-									<li>C2R helps prevent scheduling conﬂicts.  No more double booking or having to check your calendar.</li>
-									<li>C2R helps you check in on your customer without wasting time.</li>
-									<li>C2R helps level the playing ﬁeld.</li>
-								</ul>
-
-								<h3><i class="service icon fa-building-o"></i> For facilities.</h3>
-								<ul>
-									<li>
-										C2R provides a centralized source to manage vendor activity. <br>
-										- No more time wasted on looking for that business card or contact information.
-									</li>
-									
-									<li>
-										C2R prevents unnecessary time from being spent on the same task. <br>
-										- If you need to make a change or communicate a message, you only have to do it once.
-									</li>
-								</ul>
-
-								<h3><i class="service icon fa-cogs"></i> For corporations.</h3>
-								<ul>
-									<li>C2R helps ensure that your employees are going to be spending their time wisely.</li>
-								</ul>
-
-								<h3><i class="service icon fa-smile-o"></i> For consumers.</h3>
-								<ul>
-									<li>C2R helps you ﬁnd the product or service you're looking for in the fastest way possible.</li>
-								</ul>
-
-							</section>
-
-					</div>
-				</div>
-
-				<div class="row 200%">
-					<div class="12u">
-						<div class="footer-sign-in">
-							<a class="nav-sign-in" href="javascript://">Members Sign In</a>
-							<a class="nav-join" href="javascript://">Join for free</a>
-						</div>
-					</div>
-				</div>				
-
-				<div class="row 200%">
-					<div class="12u">
-
-						<!-- Contact -->
-							<section class="social-icons">
-								<h2 class="major"><span>Get in touch</span></h2>
-								<ul class="contact">
-									<li><a class="icon fa-facebook" href="javascript://"><span class="label">Facebook</span></a></li>
-									<li><a class="icon fa-twitter" href="javascript://"><span class="label">Twitter</span></a></li>
-									<li><a class="icon fa-instagram" href="javascript://"><span class="label">Instagram</span></a></li>
-									<li><a class="icon fa-google-plus" href="javascript://"><span class="label">Google+</span></a></li>
-								</ul>
-							</section>
-					
-					</div>
-				</div>
 
 				<!-- Copyright -->
 					<div id="copyright">
