--- a/personal-test-projects/Connect2Rep/services.html
+++ b/personal-test-projects/Connect2Rep/services.html
@@ -17,6 +17,7 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/scroll.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -35,15 +36,19 @@
 
 		<!-- Nav -->
 			<nav id="nav" class="skel-layers-fixed">
+				<ul class="primary">
+					<li><a href="index.html">Home</a></li>
+				</ul>
+
 				<ul>
 					<li><a href="about.html">About Us</a></li>
-					<li class="current"><a href="services.html">Services</a></li>
+					<li class="active"><a href="services.html">Services</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 
 				<ul class="secondary">
-					<li><a class="nav-sign-in" href="javascript://">Members Sign In</a></li>
-					<li><a class="nav-join" href="javascript://">Join For Free</a></li>
+					<li><a class="nav-sign-in" href="javascript://">Members Connect</a></li>
+					<li><a class="nav-join" href="javascript://">Connect For Free</a></li>
 				</ul>
 			</nav>
 		
@@ -75,6 +80,43 @@
 							</div>
 						</div>
 					</div>
+
+				</div>
+			</div>
+
+			<!-- Circle info -->
+			<div id="banner-wrapper">
+				<div class="row 200%">
+					<div class="12u">
+						
+						<!-- Highlight -->
+							<section class="box highlight">
+								<header>
+									<h2>The cost of doing business just got better </h2>
+								</header>
+
+								<ul class="special">
+									<li>
+										<a href="#goto-sale-service" class="goto icon fa-users"><span class="label">Magnifier</span></a>
+										<span><strong>For sales and service professionals</strong></span>
+									</li>
+									<li>
+										<a href="#goto-office-facilities" class="goto icon fa-building-o"><span class="label">Tablet</span></a>
+										<span><strong>For professional offices or facilities</strong></span>
+									</li>
+									<!-- <li>
+										<a href="#goto-" class="icon fa-cogs"><span class="label">Flask</span></a>
+										<span><strong>For corporations</strong></span>
+									</li> -->
+									<li>
+										<a href="#goto-consumer" class="goto icon fa-smile-o"><span class="label">Cog?</span></a>
+										<span><strong>For consumers</strong></span>
+									</li>
+								</ul>
+								
+							</section>
+
+					</div>
 				</div>
 			</div>
 
@@ -90,15 +132,16 @@
 								<strong>Connect2rep</strong> helps complete the call!</p>
 
 
-								<h3><i class="service icon fa-users"></i> For sales or service professionals.</h3>
+								<h3 id="goto-sale-service"><i class="service icon fa-users"></i> For sales or service professionals</h3>
 								<ul>
 									<li>C2R allows you to manage your activity for efﬁciency.</li>
 									<li>C2R helps prevent scheduling conﬂicts.  No more double booking or having to check your calendar.</li>
 									<li>C2R helps you check in on your customer without wasting time.</li>
 									<li>C2R helps level the playing ﬁeld.</li>
+									<li><strong>If you have a product to sell or a service to provide, this is the place for you.</strong></li>
 								</ul>
 
-								<h3><i class="service icon fa-building-o"></i> For facilities.</h3>
+								<h3 id="goto-office-facilities"><i class="service icon fa-building-o"></i> For professional offices or facilities</h3>
 								<ul>
 									<li>
 										C2R provides a centralized source to manage vendor activity. <br>
@@ -109,16 +152,18 @@
 										C2R prevents unnecessary time from being spent on the same task. <br>
 										- If you need to make a change or communicate a message, you only have to do it once.
 									</li>
+									<li><strong>If you are a place of business or a retail establishment, this is the place for you.</strong></li>
 								</ul>
 
-								<h3><i class="service icon fa-cogs"></i> For corporations.</h3>
+								<!-- <h3><i class="service icon fa-cogs"></i> For corporations</h3>
 								<ul>
 									<li>C2R helps ensure that your employees are going to be spending their time wisely.</li>
-								</ul>
+								</ul> -->
 
-								<h3><i class="service icon fa-smile-o"></i> For consumers.</h3>
+								<h3 id="goto-consumer"><i class="service icon fa-smile-o"></i> For consumers</h3>
 								<ul>
 									<li>C2R helps you ﬁnd the product or service you're looking for in the fastest way possible.</li>
+									<li><strong>Whether you are the; purchaser, client, or patient or a good or service, this is the place for you.</strong></li>
 								</ul>
 
 							</section>
@@ -129,8 +174,8 @@
 				<div class="row 200%">
 					<div class="12u">
 						<div class="footer-sign-in">
-							<a class="nav-sign-in" href="javascript://">Members Sign In</a>
-							<a class="nav-join" href="javascript://">Join for free</a>
+							<a class="nav-sign-in" href="javascript://">Members Connect</a>
+							<a class="nav-join" href="javascript://">Connect for free</a>
 						</div>
 					</div>
 				</div>				
@@ -140,7 +185,7 @@
 
 						<!-- Contact -->
 							<section class="social-icons">
-								<h2 class="major"><span>Get in touch</span></h2>
+								<h2 class="major"><span>Connect</span></h2>
 								<ul class="contact">
 									<li><a class="icon fa-facebook" href="javascript://"><span class="label">Facebook</span></a></li>
 									<li><a class="icon fa-twitter" href="javascript://"><span class="label">Twitter</span></a></li>
