header and home page customized

--- a/personal-test-projects/Connect2Rep/about.html
+++ b/personal-test-projects/Connect2Rep/about.html
@@ -24,9 +24,11 @@
 
 		<!-- Header -->
 			<header id="header">
+				<h2>Complete the call!</h2>
 				<div class="logo container">
 					<a href="index.html"></a>
 				</div>
+				<p>Fast.  Simple. <br> Effective.  Secure.</p>
 			</header>
 
 		<!-- Nav -->
