--- a/personal-test-projects/Connect2Rep/index.html
+++ b/personal-test-projects/Connect2Rep/index.html
@@ -25,9 +25,11 @@
 
 		<!-- Header -->
 			<header id="header">
+				<h2>Complete the call!</h2>
 				<div class="logo container">
 					<a href="index.html"></a>
 				</div>
+				<p>Fast.  Simple. <br> Effective.  Secure.</p>
 			</header>
 
 		<!-- Nav -->
@@ -85,11 +87,10 @@
 					</div>
 				</div>
 				<section id="banner">
-					<h3>Connect2Rep helps you go <img class="branding" src="images/c2r-icon.png" alt=""> full circle!</h3>
-					<img class="aftercall" src="images/c2r-icon.png" alt="">
-					<h2>Complete the call!</h2>
-					<p>Fast.  Simple.  Effective.  Secure.</p>
+					<h1>Connect2Rep helps you go <img class="aftercall" src="images/c2r-icon.png" alt=""> full circle!</h1>
+					<!-- <img class="aftercall" src="images/c2r-icon.png" alt=""> -->
 				</section>
+				<p class="slogan">Fast.  Simple.  Effective.  Secure.</p>
 			</div>
 			
 		<!-- Main -->
