updated personal profile information

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="intro-text">
                         <span class="name">Anisuzzaman Khan</span>
                         <hr class="star-light">
-                        <span class="skills">Problem Solver - Programmer - Web Developer</span>
+                        <span class="skills">Programmer - Problem Solver - Smart Worker</span>
                     </div>
                 </div>
             </div>
@@ -219,7 +219,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3><i class="fa fa-location-arrow"></i> Find Me</h3>
-                        <p>39/B, Senpara Parbata, Mirpur 10<br>Dhaka, Bangladesh</p>
+                        <p>39/B, Senpara Parbata<br>Mirpur 10, Dhaka<br>Bangladesh</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3><i class="fa fa-globe"></i> On the Web</h3>
@@ -243,7 +243,12 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3><i class="fa fa-male"></i> More About Me</h3>
-                        <p>C++, JavaScript and Python fan. Hardcore gamer on leisure time.</p>
+                        <p>
+                            <i class="fa fa-code"></i> C++ fan &nbsp; &nbsp; &nbsp;
+                            A cyclist <i class="fa fa-bicycle"></i><br>
+                            <i class="fa fa-cutlery"></i> Love to eat Pizza a lot!<br>
+                            <i class="fa fa-gamepad"></i> Hardcore gamer on my leisure time
+                        </p>
                     </div>
                 </div>
             </div>
@@ -252,7 +257,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        &copy; Anisuzzaman Khan | Theme by <a href="https://github.com/IronSummitMedia/startbootstrap-freelancer">Start Bootstrap</a>
+                        All contents copyright &copy; 2012 - <script>document.write(new Date().getFullYear())</script> |
+                        Anisuzzaman Khan |
+                        Theme by <a target="_blank" href="https://github.com/IronSummitMedia/startbootstrap-freelancer">Start Bootstrap</a>
                     </div>
                 </div>
             </div>
