--- a/index.html
+++ b/index.html
@@ -149,8 +149,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <p>I'm real passionate about solving problems. Attended ACM-ICPC Regional Dhaka Site in 2012, 2013 and 2014. Currently I spend most of the time learning various different algorithms.</p>
+                <div class="col-lg-8 col-lg-offset-2 text-justify">
+                    <p>I'm real passionate about solving problems. Attended ACM-ICPC Regional Dhaka Site in 2012, 2013 and 2014. I spend most of the time learning algorithms.</p>
+
+                    <p>Web development is one of my hobby. I have worked with different clients and companies to build or design their site. From my working experience I can express myself as a Front End ninja. Making responsive sites with media queries, giving wonderful CSS3 animations and transitions to different elements is as easy as cake to me. I can handle critical tasks in Back End as well. Experienced in working with industry leading technologies like Laravel, AngularJS, MongoDB, nginx.</p>
+
+                    <p>I am also involving in game development these days by investing my spare time. I always wanted to be a great game developer since my childhood. Right now, I'm working with a small team who are making a 2.5D sidescroller game. We hope to release it soon somewhere in 2016!</p>
+
                     <p>Believe in smart-work over hard-work. Love changes, don't want to stuck myself on traditional low-profit systems.</p>
                 </div>
             </div>
