new portfolio added and minor design updated

--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-tropseed" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/tropseed.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolio-oaxaca" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -133,6 +143,26 @@
                             </div>
                         </div>
                         <img src="img/portfolio/oaxaca.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-suncoast" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/suncoast.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-grafica" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/grafica.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -372,6 +402,114 @@
                                 </li>
                                 <li>Date:
                                     <strong>November 2013</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolio-suncoast" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Configured VPS for Meteor App with NGINX</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/suncoast.png" class="img-responsive img-centered" alt="">
+                            <p>My client had his meteor app on Ubuntu server which was needed to be configured on admin.suncoastlawncare.com sub-domain within his Digital Ocean droplet.</p>
+                            <p>I helped him to configure the server properly with NGINX. Now he people can view the main site and admin section is also working simultaneously. I also contributed on his meteor app using Github.</p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong><a target="_blank" href="http://www.suncoastlawncare.com/">Suncoast Lawn Care</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>July 2014</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Server Configuration</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolio-tropseed" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Custom Responsive Wordpress Theme</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/tropseed.jpg" class="img-responsive img-centered" alt="">
+                            <p>Redesign was needed for this agricultural site as previous design was not responsive. So I had to built a custom WordPress theme according to clients needs which was based on sognare theme.</p>
+                            <p>Throughout the development process I worked with some plugin tweaks and customization. Also created some custom widgets.</p>
+                            <p>The client was extremely satisfied with my work quality and finishes.</p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong><a target="_blank" href="http://www.tropseeds.com/">Tropical Seeds</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>March 2014</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolio-grafica" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Made Wordpress Site for Spanish Artist</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/grafica.jpg" class="img-responsive img-centered" alt="">
+                            <p>Grafica Maya was developed on WordPress. This Spanish site was built for managing clients artworks. He wanted to manage his content on his own and the CMS solution is given.</p>
+                            <ul class="list-inline item-details">
+                                <li>Client:
+                                    <strong><a target="_blank" href="http://graficamaya.org/">Grafica Maya</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>August 2013</strong>
                                 </li>
                                 <li>Service:
                                     <strong>Web Development</strong>
