Title changed and image optimized

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Anisuzzaman Khan - Problem Solver, Programmer, Developer</title>
+    <title>Anisuzzaman Khan - Programmer, Problem Solver, Smart Worker</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -152,7 +152,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/suncoast.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/suncoast.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -428,7 +428,7 @@
                         <div class="modal-body">
                             <h2>Configured VPS for Meteor App with NGINX</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/suncoast.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/suncoast.jpg" class="img-responsive img-centered" alt="">
                             <p>My client had his meteor app on Ubuntu server which was needed to be configured on admin.suncoastlawncare.com sub-domain within his Digital Ocean droplet.</p>
                             <p>I helped him to configure the server properly with NGINX. Now he people can view the main site and admin section is also working simultaneously. I also contributed on his meteor app using Github.</p>
                             <ul class="list-inline item-details">
