IST 3D added with auditorium

--- a/personal-test-projects/index.html
+++ b/personal-test-projects/index.html
@@ -1,7 +1,8 @@
 <h1>Test Projects</h1>
 <ul>
-	<li><a href="jQuery/">jQuery kiss</a></li>
+	<li><a href="jQuery/">jQuery Kiss</a></li>
 	<li><a href="CSS3/">CSS3 Animations</a></li>
 	<li><a href="Slider/">jQuery Slider</a></li>
 	<li><a href="Duck%20Duck%20Fly/">2D game - Duck Duck Fly</a></li>
+	<li><a href="IST_3D/">3D Visualization of IST</a></li>
 </ul>
