--- a/personal-test-projects/roller-madness-test/index.html
+++ b/personal-test-projects/roller-madness-test/index.html
@@ -126,6 +126,6 @@
 				</div>
 			</div>
 		</div>
-		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+		<p class="footer">&laquo; created by <strong>Dark Lighters</strong> with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
 	</body>
 </html>
