--- a/personal-test-projects/index.html
+++ b/personal-test-projects/index.html
@@ -5,4 +5,5 @@
 	<li><a href="Slider/">jQuery Slider</a></li>
 	<li><a href="Duck%20Duck%20Fly/">2D game - Duck Duck Fly</a></li>
 	<li><a href="IST_3D/">3D Visualization of IST</a></li>
+	<li><a href="roller-madness-test/">Roller Madness - Unity Game</a></li>
 </ul>
