--- a/index.html
+++ b/index.html
@@ -180,13 +180,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-justify">
-                    <p>I'm real passionate about solving problems. Attended ACM-ICPC Regional Dhaka Site in 2012, 2013 and 2014. I spend most of the time learning algorithms.</p>
+                    <p>A programmer coming from "Sports Programming" background with 5 years of coding experience. Love to take challenges and solve problems efficiently. Attended ACM-ICPC 2012, 2013 and 2014 in Regional Site. I always look for the best possible solution with the best time complexity.</p>
 
-                    <p>Web development is one of my hobby. I have worked with different clients and companies to build or design their site. From my working experience I can express myself as a Front End ninja. Making responsive sites with media queries, giving wonderful CSS3 animations and transitions to different elements is as easy as cake to me. I can handle critical tasks in Back End as well. Experienced in working with industry leading technologies like Laravel, AngularJS, MongoDB, nginx.</p>
+                    <p>I love budgeting my time and organize projects using various productive tools which speed up my workflow and ultimately make me a productive person in my daily life.</p>
 
-                    <p>I am also involving in game development these days by investing my spare time. I always wanted to be a great game developer since my childhood. Right now, I'm working with a small team who are making a 2.5D sidescroller game. We hope to release it soon somewhere in 2016!</p>
-
-                    <p>Believe in smart-work over hard-work. Love changes, don't want to stuck myself on traditional low-profit systems.</p>
+                    <p>Playing and building digital games are my passion!</p>
                 </div>
             </div>
         </div>
