web projects hidden

--- a/projects/index.html
+++ b/projects/index.html
@@ -1,10 +1,10 @@
 <h1>Test Projects</h1>
 <ul>
-	<li><h3>Web</h3></li>
+	<!-- <li><h3>Web</h3></li>
 	<li><a href="jQuery/">jQuery Kiss</a></li>
 	<li><a href="CSS3/">CSS3 Animations</a></li>
 	<li><a href="Slider/">jQuery Slider</a></li>
-	<li><h3>Games</h3></li>
+	<li><h3>Games</h3></li> -->
 	<li><a href="duck-duck-fly/">2D game - Duck Duck Fly</a></li>
 	<li><a href="IST_3D/">3D Visualization of IST</a></li>
 	<li><a href="roller-madness-test/">Roller Madness - Unity Game</a></li>
