employment experience added

--- a/index.html
+++ b/index.html
@@ -100,11 +100,31 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>Experience & Portfolio</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-futurism" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/futurism.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-pointhacks" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/pointhacks.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolio-crftrs-glass" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -307,6 +327,76 @@
     </div>
 
     <!-- Portfolio Modals -->
+    <div class="portfolio-modal modal fade" id="portfolio-futurism" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Software Engineer</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/futurism.jpg" class="img-responsive img-centered" alt="">
+                            <p>Futurism covers the breakthrough technologies and scientific discoveries that will shape humanity’s future. I worked here as an engineer to help them building several internal apps using NodeJS, Meteor, WordPress etc. I also made some Slack bots, wrote APIs and made Chrome extensions.</p>
+                            <ul class="list-inline item-details">
+                                <li>Company:
+                                    <strong><a target="_blank" href="https://futurism.com/">Futurism</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>May 2016</strong> to <strong>May 2017</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Software Engineering</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolio-pointhacks" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Part-time WordPress Developer</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/pointhacks.jpg" class="img-responsive img-centered" alt="">
+                            <p>PoinHacks.com.au is the best guides, deals and tips for more frequent flyer points in Australia. They have operations in New Zealand as well. Building custom WordPress plugin for various needs. I have also built some Node.JS app for them.</p>
+                            <ul class="list-inline item-details">
+                                <li>Company:
+                                    <strong><a target="_blank" href="http://pointhacks.com.au/">Point Hacks</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>February 2015</strong> to <strong>Present</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web Engineering</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="portfolio-modal modal fade" id="portfolio-crftrs-glass" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
