sm and phd added to portfolio

--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-futurism-sm" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/futurism-sm.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolio-pointhacks" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -123,6 +133,16 @@
                             </div>
                         </div>
                         <img src="img/portfolio/pointhacks.jpg" class="img-responsive" alt="">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolio-pointhacks-delivery" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/pointhacks-delivery.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -362,6 +382,43 @@
             </div>
         </div>
     </div>
+    <div class="portfolio-modal modal fade" id="portfolio-futurism-sm" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Meteor app for creating media contents</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/futurism-sm.jpg" class="img-responsive img-centered" alt="">
+                            <p>Futurism covers the breakthrough technologies and scientific discoveries that will shape humanity’s future. The main tool for creating media contents is this app, created with Meteor. It gives writers and producers ability to create contents without reaching to the main WordPress site.</p>
+                            <ul class="list-inline item-details">
+                                <li>Company:
+                                    <strong><a target="_blank" href="https://futurism.com/">Futurism</a></strong>
+                                </li>
+                                <li>App Link:
+                                    <strong><a target="_blank" href="https://spidermonkey.futurism.com/">Spider Monkey</a></strong>
+                                </li>
+                                <li>Date:
+                                    <strong>May 2016</strong> to <strong>May 2017</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web App Development</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="portfolio-modal modal fade" id="portfolio-pointhacks" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -388,6 +445,45 @@
                                 </li>
                                 <li>Service:
                                     <strong>Web Engineering</strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolio-pointhacks-delivery" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Sails.js App for creating shortlinks</h2>
+                            <hr class="star-primary">
+                            <img src="img/portfolio/pointhacks-delivery.jpg" class="img-responsive img-centered" alt="">
+                            <p>PoinHacks Delivery is an app for PointHaks for making shortlinks used in the website</p>
+                            <ul class="list-inline item-details">
+                                <li>Company:
+                                    <strong><a target="_blank" href="http://pointhacks.com.au/">Point Hacks</a>
+                                    </strong>
+                                </li>
+                                <li>App Link:
+                                    <strong><a target="_blank" href="http://go.pointhacks.com/">PointHacks Delivery</a>
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>May 2017</strong> to <strong>July 2017</strong>
+                                </li>
+                                <li>Service:
+                                    <strong>Web App Development</strong>
                                 </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
