--- a/index.html
+++ b/index.html
@@ -431,10 +431,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Part-time WordPress Developer</h2>
+                            <h2>Full Stack Developer</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/pointhacks.jpg" class="img-responsive img-centered" alt="">
-                            <p>PoinHacks.com.au is the best guides, deals and tips for more frequent flyer points in Australia. They have operations in New Zealand as well. Building custom WordPress plugin for various needs. I have also built some Node.JS app for them.</p>
+                            <p>PoinHacks.com.au is the best guides, deals and tips for more frequent flyer points in Australia. They have operations in New Zealand as well. Building custom WordPress plugin for various needs. I have also built some Node.JS apps for them.</p>
                             <ul class="list-inline item-details">
                                 <li>Company:
                                     <strong><a target="_blank" href="http://pointhacks.com.au/">Point Hacks</a>
