--- a/devil5.html
+++ b/devil5.html
@@ -19,6 +19,6 @@
 </style>
 
 <div class="container">
-    <iframe src="https://www.youtube.com/embed/KMSGj9Y2T9Q?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1"
+    <iframe src="https://www.youtube.com/embed/KMSGj9Y2T9Q?rel=0&amp;controls=0&amp;showinfo=0&amp;autostart=1"
             frameborder="0" allow="autoplay; encrypted-media" class="video"></iframe>
 </div>
