Revert "having a security"
This reverts commit 5e874d9c2ee2df8502a499692906e1b70cedcdc3.

--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <!-- <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-4">
                         <h3><i class="fa fa-location-arrow"></i> Find Me</h3>
-                        <p> <br> <br>Bangladesh</p>
-                    </div> -->
-                    <div class="footer-col col-md-offset-2 col-md-4">
+                        <p>39/B, Senpara Parbata<br>Mirpur 10, Dhaka<br>Bangladesh</p>
+                    </div>
+                    <div class="footer-col col-md-4">
                         <h3><i class="fa fa-globe"></i> On the Web</h3>
                         <ul class="list-inline">
                             <li>
