--- a/index.html
+++ b/index.html
@@ -304,13 +304,13 @@
                                 <a href="http://stackoverflow.com/users/1712600/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
                             </li>
                             <li>
-                                <a href="https://plus.google.com/+AnisuzzamanKhan/" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
+                                <a href="https://www.linkedin.com/in/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="https://facebook.com/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                         </ul>
                     </div>
