Updated about section

--- a/index.html
+++ b/index.html
@@ -201,17 +201,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>More About Me</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-justify">
-                    <p>A programmer coming from "Sports Programming" background with 5 years of coding experience. Love to take challenges and solve problems efficiently. Attended ACM-ICPC 2012, 2013 and 2014 in Regional Site. I always look for the best possible solution with the best time complexity.</p>
+                    <blockquote>A programmer coming from "Sports Programming" background with 7+ years of software development
+                        experience who always emphasize using good data structures and algorithms and building
+                        good system architecture before development. Love to adopt technologies early.
+                    </blockquote>
 
-                    <p>I love budgeting my time and organize projects using various productive tools which speed up my workflow and ultimately make me a productive person in my daily life.</p>
+                    <blockquote>Budgeting my time and organize projects using various productive tools are my favorite things to do,
+                        this speeds up my workflow and ultimately make me a productive person in my daily life.
+                    </blockquote>
 
-                    <p>Playing and building digital games are my passion!</p>
+                    <blockquote>I'm always ready to take new challenges and look for the best possible solution
+                        with the best time complexity by writing precise, clean and reusable code.
+                        Budgeting my time and organizing projects using productive tools are
+                        my favorite things to do which help me speed up my workflow and ultimately
+                        make me a productive person in my daily life.
+                    </blockquote>
                 </div>
             </div>
         </div>
