--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
     <title>Anisuzzaman Khan - Programmer, Problem Solver, Smart Worker</title>
 
-    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: //bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="//font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,7 +28,7 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    
+
     <!-- Google Analytics -->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -57,7 +57,7 @@
         src="https://www.facebook.com/tr?id=2058413414381115&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
-  
+
 </head>
 
 <body id="page-top" class="index">
@@ -264,7 +264,7 @@
                                 <a href="https://github.com/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                             </li>
                             <li>
-                                <a href="http://stackoverflow.com/users/1712600/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
+                                <a href="//stackoverflow.com/users/1712600/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-stack-overflow"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/aniskhan001" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
@@ -400,7 +400,7 @@
                             <p>PoinHacks.com.au is the best guides, deals and tips for more frequent flyer points in Australia. They have operations in New Zealand as well. Building custom WordPress plugin for various needs. I have also built some Node.JS apps for them.</p>
                             <ul class="list-inline item-details">
                                 <li>Company:
-                                    <strong><a target="_blank" href="http://pointhacks.com.au/">Point Hacks</a>
+                                    <strong><a target="_blank" href="//pointhacks.com.au/">Point Hacks</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -435,11 +435,11 @@
                             <p>PoinHacks Delivery is an app for PointHaks for making shortlinks used in the website</p>
                             <ul class="list-inline item-details">
                                 <li>Company:
-                                    <strong><a target="_blank" href="http://pointhacks.com.au/">Point Hacks</a>
+                                    <strong><a target="_blank" href="//pointhacks.com.au/">Point Hacks</a>
                                     </strong>
                                 </li>
                                 <li>App Link:
-                                    <strong><a target="_blank" href="http://go.pointhacks.com/">PointHacks Delivery</a>
+                                    <strong><a target="_blank" href="//go.pointhacks.com/">PointHacks Delivery</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -471,10 +471,10 @@
                             <h2>jQuery - Full Page Animation</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/crftrs.jpg" class="img-responsive img-centered" alt="">
-                            <p>My client wanted a site which is similar to <a target="_blank" href="http://www.themessagestudios.com/siteaug.html">The Message Studio</a> which was developed with flash. But they didn't wanted to use flash on their site. So, I provided a very light and optimized solution to this problem with the help of jQuery.</p>
+                            <p>My client wanted a site which is similar to <a target="_blank" href="//www.themessagestudios.com/siteaug.html">The Message Studio</a> which was developed with flash. But they didn't wanted to use flash on their site. So, I provided a very light and optimized solution to this problem with the help of jQuery.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a target="_blank" href="http://crftrs.com/">Crafters Glass</a>
+                                    <strong><a target="_blank" href="//crftrs.com/">Crafters Glass</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -509,7 +509,7 @@
                             <p>The original theme was Kiddo-turf WordPress theme. For designing the site, client needed me to change the entire theme to match his imagination. On the development, I designed the headers and footers and added pages and posts. Several plugins were used for several different functionality such as restricting normal users on some pages/posts, backup site settings and files, homepage slider etc. I also developed some custom plugins and shorcodes for some easier navigaton throughout the site.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a target="_blank" href="http://www.lawrencemontessorischool.com/">Lawrence Montessori School</a>
+                                    <strong><a target="_blank" href="//www.lawrencemontessorischool.com/">Lawrence Montessori School</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -544,7 +544,7 @@
                             <p>Landing page for an upcoming movie (on that moment) was needed by the client. They needed a responsive site so people can play around with the site from every devices. I gave him the solution by building the site on Twitter bootstrap framework. Also edited 3rd party navigation plugin to match with sites scheme.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a target="_blank" href="http://www.oaxacafilmfest.com/">Oaxaca Film Fest</a>
+                                    <strong><a target="_blank" href="//www.oaxacafilmfest.com/">Oaxaca Film Fest</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -580,7 +580,7 @@
                             <p>I helped him to configure the server properly with NGINX. Now he people can view the main site and admin section is also working simultaneously. I also contributed on his meteor app using Github.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a target="_blank" href="http://www.suncoastlawncare.com/">Suncoast Lawn Care</a>
+                                    <strong><a target="_blank" href="//www.suncoastlawncare.com/">Suncoast Lawn Care</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -617,7 +617,7 @@
                             <p>The client was extremely satisfied with my work quality and finishes.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a target="_blank" href="http://www.tropseeds.com/">Tropical Seeds</a>
+                                    <strong><a target="_blank" href="//www.tropseeds.com/">Tropical Seeds</a>
                                     </strong>
                                 </li>
                                 <li>Date:
@@ -642,7 +642,7 @@
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
