--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <meta name=generator content="Hugo 0.88.1">
 <link rel=alternate type=application/rss+xml href=https://aniskhan001.me/index.xml>
 <link rel=alternate type=application/json href=https://aniskhan001.me/index.json>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','UA-52769301-2','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
 <meta property="og:title" content="Anis Khan">
 <meta property="og:description" content="Enjoying life">
 <meta property="og:type" content="website">
