deploy: 51f8384729c236558214927a32e5aa7e0209ac4c

--- a/tech/index.html
+++ b/tech/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Tech | Anis Khan</title>
+<title>🧑‍💻 Tech Blogs | Anis Khan</title>
 <meta name=keywords content>
 <meta name=description content="Enjoying life">
 <meta name=author content="Anis Khan">
@@ -23,15 +23,15 @@
 <link rel=alternate type=application/rss+xml href=https://aniskhan001.me/tech/index.xml>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
-<meta property="og:title" content="Tech">
+<meta property="og:title" content="🧑‍💻 Tech Blogs">
 <meta property="og:description" content="Enjoying life">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://aniskhan001.me/tech/"><meta property="og:image" content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Anis Khan">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
-<meta name=twitter:title content="Tech">
+<meta name=twitter:title content="🧑‍💻 Tech Blogs">
 <meta name=twitter:description content="Enjoying life">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Tech","item":"https://aniskhan001.me/tech/"}]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"🧑‍💻 Tech Blogs","item":"https://aniskhan001.me/tech/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -59,7 +59,7 @@
 <div class=breadcrumbs>
 <a href=https://aniskhan001.me/>Home</a>
 </div>
-<h1>Tech</h1>
+<h1>🧑‍💻 Tech Blogs</h1>
 </header>
 <article class=post-entry>
 <header class=entry-header>
