--- a/life/index.html
+++ b/life/index.html
@@ -3,11 +3,11 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Anis Khan</title>
+<title>🌴 Life Blogs | Anis Khan</title>
 <meta name=keywords content>
 <meta name=description content="Enjoying life">
 <meta name=author content="Anis Khan">
-<link rel=canonical href=https://aniskhan001.me/>
+<link rel=canonical href=https://aniskhan001.me/life/>
 <meta name=google-site-verification content="XYZabc">
 <meta name=yandex-verification content="XYZabc">
 <meta name=msvalidate.01 content="XYZabc">
@@ -20,19 +20,18 @@
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
 <meta name=generator content="Hugo 0.88.1">
-<link rel=alternate type=application/rss+xml href=https://aniskhan001.me/index.xml>
-<link rel=alternate type=application/json href=https://aniskhan001.me/index.json>
+<link rel=alternate type=application/rss+xml href=https://aniskhan001.me/life/index.xml>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HKTS2WR0QV"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-HKTS2WR0QV',{anonymize_ip:!1})}</script>
-<meta property="og:title" content="Anis Khan">
+<meta property="og:title" content="🌴 Life Blogs">
 <meta property="og:description" content="Enjoying life">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://aniskhan001.me/"><meta property="og:image" content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Anis Khan">
+<meta property="og:url" content="https://aniskhan001.me/life/"><meta property="og:image" content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E"><meta property="og:site_name" content="Anis Khan">
 <meta name=twitter:card content="summary_large_image">
 <meta name=twitter:image content="https://aniskhan001.me/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
-<meta name=twitter:title content="Anis Khan">
+<meta name=twitter:title content="🌴 Life Blogs">
 <meta name=twitter:description content="Enjoying life">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Anis Khan","url":"https://aniskhan001.me/","description":"Enjoying life","thumbnailUrl":"https://aniskhan001.me/icon/favicon.ico","sameAs":["https://twitter.com/aniskhan001","https://github.com/aniskhan001","https://linkedin.com/in/aniskhan001","https://stackoverflow.com/users/1712600/aniskhan001","https://steamcommunity.com/id/aniskhan001"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"🌴 Life Blogs","item":"https://aniskhan001.me/life/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
@@ -55,15 +54,13 @@
 </ul>
 </nav>
 </header>
-<main class=main><div class=profile>
-<div class=profile_inner><img src=/img/profile.jpg alt="Anis Khan" height=120 width=120>
-<h1>Anis Khan</h1>
-<span>I write in a text editor</span><div class=social-icons><a href=https://twitter.com/aniskhan001 target=_blank rel="noopener noreferrer me" title=Twitter><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M23 3a10.9 10.9.0 01-3.14 1.53 4.48 4.48.0 00-7.86 3v1A10.66 10.66.0 013 4s-4 9 5 13a11.64 11.64.0 01-7 2c9 5 20 0 20-11.5a4.5 4.5.0 00-.08-.83A7.72 7.72.0 0023 3z"/></svg></a><a href=https://github.com/aniskhan001 target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg></a><a href=https://linkedin.com/in/aniskhan001 target=_blank rel="noopener noreferrer me" title=Linkedin><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></a><a href=https://stackoverflow.com/users/1712600/aniskhan001 target=_blank rel="noopener noreferrer me" title=Stackoverflow><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M2.913 16.041v6.848h17.599v-6.848M7.16 18.696h8.925M7.65 13.937l8.675 1.8M9.214 9.124l8.058 3.758M12.086 4.65l6.849 5.66M15.774 1.111l5.313 7.162"/></svg></a><a href=https://steamcommunity.com/id/aniskhan001 target=_blank rel="noopener noreferrer me" title=Steam><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentcolor" stroke="none"><path d="M11.979.0C5.678.0.511 4.86.022 11.037l6.432 2.658c.545-.371 1.203-.59 1.912-.59.063.0.125.004.188.006l2.861-4.142V8.91c0-2.495 2.028-4.524 4.524-4.524 2.494.0 4.524 2.031 4.524 4.527s-2.03 4.525-4.524 4.525h-.105l-4.076 2.911c0 .052.004.105.004.159.0 1.875-1.515 3.396-3.39 3.396-1.635.0-3.016-1.173-3.331-2.727L.436 15.27C1.862 20.307 6.486 24 11.979 24c6.627.0 11.999-5.373 11.999-12S18.605.0 11.979.0zM7.54 18.21l-1.473-.61c.262.543.714.999 1.314 1.25 1.297.539 2.793-.076 3.332-1.375.263-.63.264-1.319.005-1.949s-.75-1.121-1.377-1.383c-.624-.26-1.29-.249-1.878-.03l1.523.63c.956.4 1.409 1.5 1.009 2.455-.397.957-1.497 1.41-2.454 1.012H7.54zm11.415-9.303c0-1.662-1.353-3.015-3.015-3.015-1.665.0-3.015 1.353-3.015 3.015.0 1.665 1.35 3.015 3.015 3.015 1.663.0 3.015-1.35 3.015-3.015zm-5.273-.005c0-1.252 1.013-2.266 2.265-2.266 1.249.0 2.266 1.014 2.266 2.266.0 1.251-1.017 2.265-2.266 2.265-1.253.0-2.265-1.014-2.265-2.265z"/></svg></a></div>
-<div class=buttons><a class=button href=tech rel=noopener title="Tech blogs">
-<span class=button-inner>🧑‍💻 Tech Blogs</span>
-</a></div>
+<main class=main>
+<header class=page-header>
+<div class=breadcrumbs>
+<a href=https://aniskhan001.me/>Home</a>
 </div>
-</div>
+<h1>🌴 Life Blogs</h1>
+</header>
 </main><footer class=footer>
 <span>&copy; 2021 <a href=https://aniskhan001.me/>Anis Khan</a></span>
 <span>&#183;</span>
